k8s/base/apps/demo-api/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-api
  labels:
    name: demo-api
